# dopshy-bot

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  utils.py
apps_script/: Actions.gs  ApiClient.gs  Code.gs  Groupings.gs  Groupings_Sidebar.gs  Setup.gs  Sidebar.gs  appsscript.json  group_sidebar.html  sidebar.html  statusModal.html
blueprints/: manager_api.py
chat/: conversation.py  llm.py
data/: conversations.db
docs/: booking_integration_plan.md  implementation-plan.md
documents/: 01_admin_role_and_safety.md  02_communication_framework.md  03_customer_segments.md  04_booking_payment_operations.md  05_faq_and_short_answers.md  06_examples_segment_a_corporate.md  07_examples_segment_b_regular_players.md  08_examples_segment_c_loyal_clients.md  09_objections_followups_and_retention.md  10_bot_response_policy.md  11_pricing_periods.md  faq_kz.md  faq_ru.md  pricing_ru.md  rules_ru.md  services_kz.md  services_ru.md
handlers/: booking_session.py  booking_via_llm.py  edit_booking.py  edit_trial.py  extractor.py  index.py  llm1_router.py  llm2_processor.py  llm_booking_flow.py  message_handler.py  prompt llms  questions.py  router.py  trial_session.py  whatsapp_client.py
integrations/: booking.py  booking_service.py  payment_validation.py  postgres.py  receipt_parser.py  sheets.py  trial.py
migrations/: 001_baseline.sql  002_booking_state_columns.sql  003_backfill.sql  004_constraints.sql  005_exclusion_constraint.sql  006_drop_legacy.sql  007_new_tables.sql  (+23 more)
nginx/: Dockerfile  (+5 more)
(+36 files in other folders)
