[tool.poetry]
name = "dopshy-bot"
version = "0.1.0"
description = "WhatsApp chatbot for Dopshy football field rental"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1"
openai = "^1.68"
chromadb = "^0.6"
numpy = ">=1.24,<2.0"
python-dotenv = "^1.0"
requests = "^2.32"
langchain = "^0.3"
langchain-openai = "^0.3"
langchain-community = "^0.3"
langchain-chroma = "^0.2"
tiktoken = "^0.9"
gunicorn = "^23.0"
gspread = "^6.0"
google-auth = "^2.0"
psycopg2-binary = "^2.9"
apscheduler = "^3.10"
tzdata = "^2026.2"
pypdf = "^6.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
